@@ -16,16 +16,22 @@ add_thickbox();
 ?>
 
 <?php
-do_shortcode('[course_unit_archive_submenu]');
+
 if ( 100 == ( int ) $progress ) {
     $complete_message = '<span class="unit-archive-course-complete cp-wrap"><i class="fa fa-check-circle"></i> ' . __('Course Complete', 'cp') . '</span>';
+	$workbook_course_progress = '';
 } else {
     $complete_message = '';
+	$workbook_course_progress = '<span class="workbook-course-progress">' . __( 'Course progress: ', 'cp' ) . esc_html( $progress ) . '%' . '</span>';
 }
+
 ?>
 
-<h2>
+<?php do_shortcode('[course_unit_archive_submenu]'); ?>
+
+<h2 class="workbook-title">
     <?php echo __('Workbook', 'cp');
+	echo $workbook_course_progress;
     echo $complete_message; ?>
 </h2>
 
@@ -41,7 +47,7 @@ if ( have_posts() ) {
         <div class="workbook_units cp-wrap">
             <div class="unit_title">
                 <h3><?php the_title(); ?>
-                    <span><?php echo do_shortcode('[course_unit_progress course_id="' . $course_id . '" unit_id="' . get_the_ID() . '"]'); ?>% <?php _e('completed', 'cp'); ?></span>
+                    <span><?php _e('Unit progress: ', 'cp'); ?> <?php echo do_shortcode('[course_unit_progress course_id="' . $course_id . '" unit_id="' . get_the_ID() . '"]'); ?>%</span>
                 </h3>
             </div>
                 <?php if ( $has_assessable ) { ?>
